--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
   </style>
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
+  <div class="card-rank">
+    <div class="logo-star"></div>
+    <h1 class="title">How did we do?</h1>
+    <p class="text">
+      Please let us know how we did with your support request. All feedback 
+      is appreciated to help us improve our offering!
+    </p>
+    <section class="rank">
+      <button class="rank--1">1</button>
+      <button class="rank--2">2</button>
+      <button class="rank--3">3</button>
+      <button class="rank--4">4</button>
+      <button class="rank--5">5</button>
+    </section>
+    <button>SUBMIT</button>
+  </div>
+  <div class="card-thankyou">
+    <img class="logo-thankyou">
+    <div class="selection">You selected <span>0</span> out of 5</div>
+    <h1 class="title">Thank you!</h1>
+    <p class="text">
+      We appreciate you taking the time to give a rating. If you ever 
+      need more support,don’t hesitate to get in touch!
+    </p>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
