--- a/index.html
+++ b/index.html
@@ -2,49 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/index.css">
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  <div class="card-rank">
+
+  <div class="card rating">
     <div class="logo-star"></div>
     <h1 class="title">How did we do?</h1>
     <p class="text">
       Please let us know how we did with your support request. All feedback 
       is appreciated to help us improve our offering!
     </p>
-    <section class="rank">
-      <button class="rank--1">1</button>
-      <button class="rank--2">2</button>
-      <button class="rank--3">3</button>
-      <button class="rank--4">4</button>
-      <button class="rank--5">5</button>
+    <section class="rating">
+      <button class="rating--1">1</button>
+      <button class="rating--2">2</button>
+      <button class="rating--3">3</button>
+      <button class="rating--4">4</button>
+      <button class="rating--5">5</button>
     </section>
     <button>SUBMIT</button>
   </div>
-  <div class="card-thankyou">
+
+  <div class="card thankyou">
     <img class="logo-thankyou">
     <div class="selection">You selected <span>0</span> out of 5</div>
     <h1 class="title">Thank you!</h1>
     <p class="text">
       We appreciate you taking the time to give a rating. If you ever 
-      need more support,don’t hesitate to get in touch!
+      need more support,don't hesitate to get in touch!
     </p>
   </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
   <script src="./index.js"></script>
 </body>
 </html>
