--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       Please let us know how we did with your support request. All feedback 
       is appreciated to help us improve our offering!
     </p>
-    <section class="rating">
-      <button class="rating--1">1</button>
-      <button class="rating--2">2</button>
-      <button class="rating--3">3</button>
-      <button class="rating--4">4</button>
-      <button class="rating--5">5</button>
+    <section class="rating-container">
+      <button class="rating__btn">1</button>
+      <button class="rating__btn">2</button>
+      <button class="rating__btn">3</button>
+      <button class="rating__btn">4</button>
+      <button class="rating__btn">5</button>
     </section>
-    <button>SUBMIT</button>
+    <button class="submit-btn">SUBMIT</button>
   </div>
 
   <div class="card thankyou">
