--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="card thankyou">
-    <img class="logo-thankyou">
+    <img class="logo-thankyou" src="./images/illustration-thank-you.svg">
     <div class="selection">You selected <span>0</span> out of 5</div>
     <h1 class="title">Thank you!</h1>
     <p class="text">
