--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles/index.css">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./styles/index.css">
 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Interactive rating component</title>
 
-  <div class="card rating">
-    <div class="logo-star"></div>
-    <h1 class="title">How did we do?</h1>
-    <p class="text">
-      Please let us know how we did with your support request. All feedback 
-      is appreciated to help us improve our offering!
-    </p>
-    <section class="rating-container">
-      <button class="rating__btn">1</button>
-      <button class="rating__btn">2</button>
-      <button class="rating__btn">3</button>
-      <button class="rating__btn">4</button>
-      <button class="rating__btn">5</button>
-    </section>
-    <button class="submit-btn">SUBMIT</button>
-  </div>
+    <style>
+      .attribution { font-size: 11px; text-align: center; }
+      .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
+  </head>
+  <body>
+    
+<!-- Rating Card -->
+    <div class="card rating">
+      <div class="logo-star"></div>
+      <h1 class="title">How did we do?</h1>
+      <p class="text">
+        Please let us know how we did with your support request. All feedback 
+        is appreciated to help us improve our offering!
+      </p>
+      <section class="rating-container">
+        <button class="rating__btn">1</button>
+        <button class="rating__btn">2</button>
+        <button class="rating__btn">3</button>
+        <button class="rating__btn">4</button>
+        <button class="rating__btn">5</button>
+      </section>
+      <button class="submit-btn">SUBMIT</button>
+    </div>
+<!-- Rating Card -->
 
-  <div class="card thankyou">
-    <img class="logo-thankyou" src="./images/illustration-thank-you.svg">
-    <div class="selection">You selected <span>0</span> out of 5</div>
-    <h1 class="title">Thank you!</h1>
-    <p class="text">
-      We appreciate you taking the time to give a rating. If you ever 
-      need more support,don't hesitate to get in touch!
-    </p>
-  </div>
+<!-- Thankyou Card -->
+    <div class="card thankyou">
+      <img class="logo-thankyou" src="./images/illustration-thank-you.svg">
+      <div class="selection">You selected <span>0</span> out of 5</div>
+      <h1 class="title">Thank you!</h1>
+      <p class="text">
+        We appreciate you taking the time to give a rating. If you ever 
+        need more support,don't hesitate to get in touch!
+      </p>
+    </div>
+<!-- Thankyou Card -->
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.saulruiz.me/">Saul Ruiz</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.saulruiz.me/">Saul Ruiz</a>.
+    </div>
 
-  <script src="./index.js"></script>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
